--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>DelingAlieZ</title>
+    <title>DelingAlieZ-笔直向前，说到做到，因为这就是我的忍道！</title>
     <base target="_blank">
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/index.css"/>
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" class="ico"/>
 </head>
 
@@ -15,9 +15,9 @@
         <!--页眉-->
         <header>
             <nav>
-                <a class="logo" href="https://delingaliez10.github.io/delingaliez.github.io/" target="_self">DelingAlieZ</a>
+                <a class="logo" href="https://delingaliez10.github.io/me/" target="_self">DelingAlieZ</a>
                 <ul>
-                    <li><a href="https://delingaliez10.github.io/delingaliez.github.io/" target="_self">首页</a></li>
+                    <li><a href="https://delingaliez10.github.io/me/" target="_self">首页</a></li>
                     <li><a href="javascript:void(0)">日志</a></li>
                     <li><a href="javascript:void(0)">分享</a></li>
                     <li><a href="https://github.com/DelingAlieZ10">学习</a></li>
@@ -32,23 +32,68 @@
         <main class="clearfix">
             <article class="fl">
                 <h2>文章推荐</h2>
-                <div class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsa minima nisi voluptate temporibus, sapiente quasi totam omnis maxime, praesentium ab accusantium ad laboriosam. Nostrum obcaecati inventore odit consectetur, velit quaerat quod iste a pariatur amet distinctio veritatis non neque sint soluta expedita accusamus suscipit eveniet earum nemo ab, animi recusandae officia. Deserunt eveniet aperiam unde officia repellendus ex, fugit consequuntur porro nisi voluptate quo repudiandae totam, placeat quae maiores praesentium culpa id, obcaecati magni eum ratione ab debitis voluptatibus pariatur vitae! Possimus optio architecto enim non reprehenderit, in quam ducimus aliquid ab corrupti modi, dolore inventore debitis at blanditiis aperiam maiores mollitia quas reiciendis praesentium ea deserunt, voluptatibus voluptate. Amet et vel cupiditate harum nobis corrupti ex deserunt excepturi. Neque veritatis provident, animi atque cupiditate vel labore, quisquam reiciendis accusantium consequatur corporis iusto optio aliquid beatae quia, rerum non obcaecati accusamus ipsa facilis? Officia doloribus veniam, dolorum consectetur dicta quia, atque necessitatibus in qui soluta rerum tempore hic fuga perferendis sequi accusamus voluptatibus sit pariatur. Dolores minima mollitia nostrum nulla veniam repudiandae deleniti quaerat doloribus, dolore placeat debitis ipsa non beatae, doloremque corporis exercitationem iure quae sit asperiores ea eaque consectetur, sequi eligendi! Explicabo, ipsam, voluptate. Iste, laboriosam! Fugiat quos debitis porro, consectetur? Repellendus sed maxime perspiciatis a officia vel, maiores ducimus ratione fuga quo dicta velit voluptatem veniam voluptatibus deleniti ex? Quam ipsa illum, nostrum distinctio possimus voluptas, ipsum aut amet consequatur, tenetur quas quod maiores ab magnam aliquid debitis cupiditate vero vel consequuntur corporis alias. Maiores quibusdam, minus eius neque ea doloremque consequuntur vel. A commodi amet, optio vel libero quaerat, voluptas dolor minima! Corrupti eius dolore sequi, dolorum accusamus laudantium quidem, corporis consequuntur voluptate quod, amet repellat asperiores maxime dicta officiis minus. Vitae quia dicta, esse vero officia molestias, porro explicabo cumque alias, eligendi eum cum.</div>
+                <div class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsa minima nisi voluptate temporibus, sapiente
+                    quasi totam omnis maxime, praesentium ab accusantium ad laboriosam. Nostrum obcaecati inventore odit
+                    consectetur, velit quaerat quod iste a pariatur amet distinctio veritatis non neque sint soluta expedita
+                    accusamus suscipit eveniet earum nemo ab, animi recusandae officia. Deserunt eveniet aperiam unde officia
+                    repellendus ex, fugit consequuntur porro nisi voluptate quo repudiandae totam, placeat quae maiores praesentium
+                    culpa id, obcaecati magni eum ratione ab debitis voluptatibus pariatur vitae! Possimus optio architecto
+                    enim non reprehenderit, in quam ducimus aliquid ab corrupti modi, dolore inventore debitis at blanditiis
+                    aperiam maiores mollitia quas reiciendis praesentium ea deserunt, voluptatibus voluptate. Amet et vel
+                    cupiditate harum nobis corrupti ex deserunt excepturi. Neque veritatis provident, animi atque cupiditate
+                    vel labore, quisquam reiciendis accusantium consequatur corporis iusto optio aliquid beatae quia, rerum
+                    non obcaecati accusamus ipsa facilis? Officia doloribus veniam, dolorum consectetur dicta quia, atque
+                    necessitatibus in qui soluta rerum tempore hic fuga perferendis sequi accusamus voluptatibus sit pariatur.
+                    Dolores minima mollitia nostrum nulla veniam repudiandae deleniti quaerat doloribus, dolore placeat debitis
+                    ipsa non beatae, doloremque corporis exercitationem iure quae sit asperiores ea eaque consectetur, sequi
+                    eligendi! Explicabo, ipsam, voluptate. Iste, laboriosam! Fugiat quos debitis porro, consectetur? Repellendus
+                    sed maxime perspiciatis a officia vel, maiores ducimus ratione fuga quo dicta velit voluptatem veniam
+                    voluptatibus deleniti ex? Quam ipsa illum, nostrum distinctio possimus voluptas, ipsum aut amet consequatur,
+                    tenetur quas quod maiores ab magnam aliquid debitis cupiditate vero vel consequuntur corporis alias.
+                    Maiores quibusdam, minus eius neque ea doloremque consequuntur vel. A commodi amet, optio vel libero
+                    quaerat, voluptas dolor minima! Corrupti eius dolore sequi, dolorum accusamus laudantium quidem, corporis
+                    consequuntur voluptate quod, amet repellat asperiores maxime dicta officiis minus. Vitae quia dicta,
+                    esse vero officia molestias, porro explicabo cumque alias, eligendi eum cum.</div>
             </article>
             <aside>
+                <!--这一部分还有待完善  -->
+                <div class="self">
+                    <h4>个人介绍：</h4>
+                    <div>
+                        <img src="./images/self.dl.jpg" alt="个人照片">
+                        <div>
+                            <p>姓名：<span>xx</span></p>
+                            <p>年龄：<span>xx</span></p>
+                            <p>性别：<span>xx</span></p>
+                            <p>爱好：<span>xx</span></p>
+                        </div>
+                    </div>
+                    <h4>个性签名：</h4>
+                    <p>褪一分浮躁，守一分宁静，握一份真诚，携一份善良，简单程序员……</p>
+                </div>
                 <div class="news">
-                    <h2>最新动态</h2>
+                    <h3>最新动态</h3>
+                    <div class="content">
+                        <p>只想快快乐乐的生活！</p>
+                    </div>
                 </div>
                 <div class="messages">
-                    <h2>留言板</h2>
+                    <h3>留言板</h3>
+                    <div class="content">
+                        <p>只想快快乐乐的生活！</p>
+                    </div>
                 </div>
                 <div class="friends">
-                    <h2>友情链接</h2>
+                    <h3>友情链接</h3>
+                    <div class="content">
+                        <p>只想快快乐乐的生活！</p>
+                    </div>
                 </div>
             </aside>
 
         </main>
         <footer>
-            页脚
+            2016-2017 &copy; DelingAlieZ
         </footer>
     </div>
 
