简单修改后提交

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <title>DelingAlieZ-笔直向前，说到做到，因为这就是我的忍道！</title>
     <base target="_blank">
-    <link rel="stylesheet" type="text/css" href="css/index.css"/>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" class="ico"/>
+    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" class="ico" />
 </head>
 
 <body>
@@ -17,11 +17,21 @@
             <nav>
                 <a class="logo" href="https://delingaliez10.github.io/me/" target="_self">DelingAlieZ</a>
                 <ul>
-                    <li><a href="https://delingaliez10.github.io/me/" target="_self">首页</a></li>
-                    <li><a href="javascript:void(0)">日志</a></li>
-                    <li><a href="javascript:void(0)">分享</a></li>
-                    <li><a href="https://github.com/DelingAlieZ10">学习</a></li>
-                    <li><a href="javascript:void(0)">关于我</a></li>
+                    <li>
+                        <a href="https://delingaliez10.github.io/me/" target="_self">首页</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">日志</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">分享</a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/DelingAlieZ10">学习</a>
+                    </li>
+                    <li>
+                        <a href="javascript:void(0)">关于我</a>
+                    </li>
                 </ul>
                 <div class="nav_search">
                     <input type="search" name="" placeholder="请输入搜索的内容…">
@@ -62,15 +72,24 @@
                     <div>
                         <img src="./images/self.dl.jpg" alt="个人照片">
                         <div>
-                            <p>姓名：<span>xx</span></p>
-                            <p>年龄：<span>xx</span></p>
-                            <p>性别：<span>xx</span></p>
-                            <p>爱好：<span>xx</span></p>
+                            <p>姓名：
+                                <span>xx</span>
+                            </p>
+                            <p>年龄：
+                                <span>xx</span>
+                            </p>
+                            <p>性别：
+                                <span>xx</span>
+                            </p>
+                            <p>爱好：
+                                <span>xx</span>
+                            </p>
                         </div>
                     </div>
                     <h4>个性签名：</h4>
                     <p>褪一分浮躁，守一分宁静，握一份真诚，携一份善良，简单程序员……</p>
                 </div>
+                <!-- 相关板块信息 -->
                 <div class="news">
                     <h3>最新动态</h3>
                     <div class="content">
@@ -93,7 +112,14 @@
 
         </main>
         <footer>
-            2016-2017 &copy; DelingAlieZ
+            <p>
+                <a href="javascript:void(0);">功能介绍</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="javascript:void(0);">服务协议</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="javascript:void(0);">关于我们</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+                <a href="javascript:void(0);">侵权投诉</a>&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+            <p>2016-2017 &copy;
+                <a href="http://delingaliez10.githtb.io/me">DelingAlieZ10</a>
+            </p>
         </footer>
     </div>
 
