添加了瀑布流和jQueryScrollbar

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <title>DelingAlieZ-笔直向前，说到做到，因为这就是我的忍道！</title>
     <base target="_blank">
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" class="ico" />
+    <link rel="stylesheet" type="text/css" href="./css/jquery.scrollbar.css" />
+    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" type="text/css" href="./css/waterFull.css" />
 </head>
 
 <body>
@@ -41,30 +43,240 @@
         </header>
         <main class="clearfix">
             <article class="fl">
-                <h2>文章推荐</h2>
-                <div class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsa minima nisi voluptate temporibus, sapiente
-                    quasi totam omnis maxime, praesentium ab accusantium ad laboriosam. Nostrum obcaecati inventore odit
-                    consectetur, velit quaerat quod iste a pariatur amet distinctio veritatis non neque sint soluta expedita
-                    accusamus suscipit eveniet earum nemo ab, animi recusandae officia. Deserunt eveniet aperiam unde officia
-                    repellendus ex, fugit consequuntur porro nisi voluptate quo repudiandae totam, placeat quae maiores praesentium
-                    culpa id, obcaecati magni eum ratione ab debitis voluptatibus pariatur vitae! Possimus optio architecto
-                    enim non reprehenderit, in quam ducimus aliquid ab corrupti modi, dolore inventore debitis at blanditiis
-                    aperiam maiores mollitia quas reiciendis praesentium ea deserunt, voluptatibus voluptate. Amet et vel
-                    cupiditate harum nobis corrupti ex deserunt excepturi. Neque veritatis provident, animi atque cupiditate
-                    vel labore, quisquam reiciendis accusantium consequatur corporis iusto optio aliquid beatae quia, rerum
-                    non obcaecati accusamus ipsa facilis? Officia doloribus veniam, dolorum consectetur dicta quia, atque
-                    necessitatibus in qui soluta rerum tempore hic fuga perferendis sequi accusamus voluptatibus sit pariatur.
-                    Dolores minima mollitia nostrum nulla veniam repudiandae deleniti quaerat doloribus, dolore placeat debitis
-                    ipsa non beatae, doloremque corporis exercitationem iure quae sit asperiores ea eaque consectetur, sequi
-                    eligendi! Explicabo, ipsam, voluptate. Iste, laboriosam! Fugiat quos debitis porro, consectetur? Repellendus
-                    sed maxime perspiciatis a officia vel, maiores ducimus ratione fuga quo dicta velit voluptatem veniam
-                    voluptatibus deleniti ex? Quam ipsa illum, nostrum distinctio possimus voluptas, ipsum aut amet consequatur,
-                    tenetur quas quod maiores ab magnam aliquid debitis cupiditate vero vel consequuntur corporis alias.
-                    Maiores quibusdam, minus eius neque ea doloremque consequuntur vel. A commodi amet, optio vel libero
-                    quaerat, voluptas dolor minima! Corrupti eius dolore sequi, dolorum accusamus laudantium quidem, corporis
-                    consequuntur voluptate quod, amet repellat asperiores maxime dicta officiis minus. Vitae quia dicta,
-                    esse vero officia molestias, porro explicabo cumque alias, eligendi eum cum.</div>
+                <div class="art_list">
+                    <h2>文章推荐</h2>
+                    <div class="test">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic, ipsa minima nisi voluptate temporibus,
+                        sapiente quasi totam omnis maxime, praesentium ab accusantium ad laboriosam. Nostrum obcaecati inventore
+                        odit consectetur, velit quaerat quod iste a pariatur amet distinctio veritatis non neque sint soluta
+                        expedita accusamus suscipit eveniet earum nemo ab, animi recusandae officia. Deserunt eveniet aperiam
+                        unde officia repellendus ex, fugit consequuntur porro nisi voluptate quo repudiandae totam, placeat
+                        quae maiores praesentium culpa id, obcaecati magni eum ratione ab debitis voluptatibus pariatur vitae!
+                        Possimus optio architecto enim non reprehenderit, in quam ducimus aliquid ab corrupti modi, dolore
+                        inventore debitis at blanditiis aperiam maiores mollitia quas reiciendis praesentium ea deserunt,
+                        voluptatibus voluptate. Amet et vel cupiditate harum nobis corrupti ex deserunt excepturi. Neque
+                        veritatis provident, animi atque cupiditate vel labore, quisquam reiciendis accusantium consequatur
+                        corporis iusto optio aliquid beatae quia, rerum non obcaecati accusamus ipsa facilis? Officia doloribus
+                        veniam, dolorum consectetur dicta quia, atque necessitatibus in qui soluta rerum tempore hic fuga
+                        perferendis sequi accusamus voluptatibus sit pariatur. Dolores minima mollitia nostrum nulla veniam
+                        repudiandae deleniti quaerat doloribus, dolore placeat debitis ipsa non beatae, doloremque corporis
+                        exercitationem iure quae sit asperiores ea eaque consectetur, sequi eligendi! Explicabo, ipsam, voluptate.
+                        Iste, laboriosam! Fugiat quos debitis porro, consectetur? Repellendus sed maxime perspiciatis a officia
+                        vel, maiores ducimus ratione fuga quo dicta velit voluptatem veniam voluptatibus deleniti ex? Quam
+                        ipsa illum, nostrum distinctio possimus voluptas, ipsum aut amet consequatur, tenetur quas quod maiores
+                        ab magnam aliquid debitis cupiditate vero vel consequuntur corporis alias. Maiores quibusdam, minus
+                        eius neque ea doloremque consequuntur vel. A commodi amet, optio vel libero quaerat, voluptas dolor
+                        minima! Corrupti eius dolore sequi, dolorum accusamus laudantium quidem, corporis consequuntur voluptate
+                        quod, amet repellat asperiores maxime dicta officiis minus. Vitae quia dicta, esse vero officia molestias,
+                        porro explicabo cumque alias, eligendi eum cum.</div>
+
+                </div>
+                <div class="art_list">
+                    <div class="art_item">
+                        <h2>案例展示</h2>
+                        <div id="waterFull">
+                            <div id="main" class="scrollbar-inner">
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a8.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a8.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a3.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a5.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a3.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a5.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a3.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a1.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a1.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a3.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/xiongmao.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a3.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/a5.jpg">
+                                    </div>
+                                </div>
+                                <div class="box">
+                                    <div class="pic">
+                                        <img src="./images/waterFull/nothing.png">
+                                    </div>
+                                </div>
+                            </div>
+                            <script>
+                                window.onload = function () {
+                                    waterFull('main', 'box');
+                                }
+
+                                function waterFull(parent, children) {
+                                    var Allbox = $("#" + parent + ">." + children);
+                                    //    console.log(Allbox);
+                                    var itemWidth = Allbox[0].clientWidth;
+                                    //    console.log(itemWidth);
+                                    var mainWidth = $("#" + parent)[0].clientWidth;
+                                    //    console.log(mainWidth);
+                                    var cols = Math.floor(mainWidth / itemWidth)
+                                    // console.log(cols);
+                                    $("#" + parent).css({
+                                        "width": cols * itemWidth + "px",
+                                        "margin": "0 auto"
+                                    })
+                                    var heightArr = [];
+                                    $.each(Allbox, function (index, value) {
+                                        // var itemHeight = $(value).outerHeight();
+                                        var itemHeight = $(value)[0].offsetHeight;
+                                        // console.log($(value).outerHeight())
+                                        // console.log($(value)[0].offsetHeight)
+                                        if (index < cols) {
+                                            heightArr[index] = value.clientHeight;
+                                        } else {
+                                            var minHeight = Math.min.apply(null, heightArr)
+                                            // console.log(minHeight);
+                                            var minHeightIndex = $.inArray(minHeight, heightArr);
+                                            // console.log(minHeightIndex);
+                                            // console.log(itemWidth)
+                                            $(value).css({
+                                                "position": "absolute",
+                                                "top": heightArr[minHeightIndex] + "px",
+                                                "left": minHeightIndex * itemWidth + "px"
+                                            })
+                                            // console.log(heightArr[minHeightIndex]);
+                                            // console.log(heightArr[minHeightIndex]*itemWidth);
+                                            heightArr[minHeightIndex] += itemHeight
+                                        }
+                                    })
+
+                                }
+                            </script>
+                        </div>
+                    </div>
+                </div>
             </article>
+
             <aside>
                 <!--这一部分还有待完善  -->
                 <div class="self">
@@ -124,5 +336,12 @@
     </div>
 
 </body>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+<script src="./lib/jquery.scrollbar.min.js"></script>
+<script>
+    jQuery('.scrollbar-inner').scrollbar({
+        "autoUpdate": true,
+    });
+</script>
 
 </html>
